merges 2.5dev back into trunk exclamation mark